// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components utils : labels AgentLabel should not render the name of the agent because no name is passed 1`] = `
<div
  className="AgentLabel d-inline-flex align-items-center"
>
  <Avatar
    className="avatar"
    email=""
    name=""
    size="26"
    style={Object {}}
    url="https://gorgias.io/profilepicture.png"
  />
</div>
`;

exports[`components utils : labels AgentLabel should render the agent icon because no profile picture url nor the \`avatar\` option are passed 1`] = `
<div
  className="AgentLabel d-inline-flex align-items-center"
>
  <span
    className="material-icons md-2"
  >
    account_circle
  </span>
  <span
    className="name font-weight-medium"
    style={Object {}}
  >
    Marie Curie
  </span>
</div>
`;

exports[`components utils : labels AgentLabel should render the avatar because a profile picture url is passed 1`] = `
<div
  className="AgentLabel d-inline-flex align-items-center"
>
  <Avatar
    className="avatar"
    email=""
    name="Marie Curie"
    size="26"
    style={Object {}}
    url="https://gorgias.io/profilepicture.png"
  />
  <span
    className="name font-weight-medium"
    style={Object {}}
  >
    Marie Curie
  </span>
</div>
`;

exports[`components utils : labels AgentLabel should render the avatar because the \`avatar\` option is passed but no profile picture url is passed 1`] = `
<div
  className="AgentLabel d-inline-flex align-items-center"
>
  <Avatar
    className="avatar"
    email=""
    name="Marie Curie"
    size="26"
    style={Object {}}
    url=""
  />
  <span
    className="name font-weight-medium"
    style={Object {}}
  >
    Marie Curie
  </span>
</div>
`;

exports[`components utils : labels RenderLabel ValueRendered should display name and address formatted as aircall eg: with address into parenthesis 1`] = `
<IntegrationsDetailLabel
  integration={
    Immutable.Map {
      "type": "aircall",
      "name": "common",
      "address": "aircall style",
    }
  }
>
  <span>
    <SourceIcon
      className="mr-2"
      type="aircall"
    >
      <i
        className="icon d-inline-block material-icons mr-2"
      >
        phone
      </i>
    </SourceIcon>
    common (aircall style)
  </span>
</IntegrationsDetailLabel>
`;

exports[`components utils : labels RenderLabel ValueRendered should display name and address formatted in-lined 1`] = `
<IntegrationsDetailLabel
  integration={
    Immutable.Map {
      "type": "gmail",
      "name": "common",
      "address": "inlined email",
    }
  }
>
  <span>
    <SourceIcon
      className="mr-2"
      type="gmail"
    >
      <i
        className="icon d-inline-block material-icons mr-2"
      >
        email
      </i>
    </SourceIcon>
    common &lt;inlined email&gt;
  </span>
</IntegrationsDetailLabel>
`;

exports[`components utils : labels RenderLabel ValueRendered should display the address to prevent confusion 1`] = `
<IntegrationsDetailLabel
  integration={
    Immutable.Map {
      "type": "email",
      "name": "common",
      "meta": Immutable.Map {
        "address": "specific",
      },
    }
  }
>
  <span>
    <SourceIcon
      className="mr-2"
      type="email"
    >
      <i
        className="icon d-inline-block material-icons mr-2"
      >
        email
      </i>
    </SourceIcon>
    common &lt;specific&gt;
  </span>
</IntegrationsDetailLabel>
`;

exports[`components utils : labels RenderLabel ValueRendered should display the name because the address is empty 1`] = `
<IntegrationsDetailLabel
  integration={
    Immutable.Map {
      "type": "email",
      "name": "common",
      "meta": Immutable.Map {
        "address": "",
      },
    }
  }
>
  <span>
    <SourceIcon
      className="mr-2"
      type="email"
    >
      <i
        className="icon d-inline-block material-icons mr-2"
      >
        email
      </i>
    </SourceIcon>
    common
  </span>
</IntegrationsDetailLabel>
`;

exports[`components utils : labels RenderLabel ValueRendered should display the name because the type is facebook 1`] = `
<IntegrationsDetailLabel
  integration={
    Immutable.Map {
      "type": "facebook",
      "name": "common",
      "meta": Immutable.Map {
        "address": "specific",
      },
    }
  }
>
  <span>
    <SourceIcon
      className="mr-2"
      type="facebook"
    >
      <i
        className="icon d-inline-block icon-custom icon-facebook mr-2"
      />
    </SourceIcon>
    common
  </span>
</IntegrationsDetailLabel>
`;
